Update 01. GPT 모델 파인튜닝 시작하기.md

--- a/나만의 GPT 개발/01. GPT 모델 파인튜닝 시작하기.md
+++ b/나만의 GPT 개발/01. GPT 모델 파인튜닝 시작하기.md
@@ -1,1 +1,14 @@
+* GPT 모델의 파인튜닝에 대한 개념과 시작하는 방법을 소개
+* 파인 튜닝을 위해 필요한 절차와 데이터 준비에 대해 설명
+* 모델을 개인화하는 방법
 
+1) [GPT아키텍쳐 이해](#-아키텍쳐-이해)
+2) 파인튜닝을 위한 환경 설정
+3) 사전 훈련된 GPT 모델 다운로드
+4) 파인튜닝을 위한 준비
+5) 파인튜닝 과정
+6) 효과적인 파인튜닝을 위한 팁과 요령
+7) 오류 분석과 모델 디버깅
+8) 파인튜닝 과정 보호
+
+## 아키텍쳐 이해
