--- a/나만의 GPT 개발/01. GPT 모델 파인튜닝 시작하기.md
+++ b/나만의 GPT 개발/01. GPT 모델 파인튜닝 시작하기.md
@@ -15,5 +15,18 @@
 
 ---
 ## 아키텍쳐 이해
+GPT 모델을 세밀하게 조정하는 데 앞서, 그 모델의 아키텍처를 이해하는 것이 중요하다.
+GPT 아키텍처는 자연어 처리 분야에 혁신을 가져온 Transformer 모델을 기반으로 구축되었다.
+
+### Transformer 아키텍처 이해하기
+Transformer 모델은 VasWani 등이 발표한 "Attention si All You Need" 논문에서 소개된 것으로, GPT를 비롯한 많은 현대적인 NLP 모델의 기반이 되었다.
+Transformer 모델은 "어텐션"이라는 메커니즘을 사용하여 텍스트 내 단어 간의 문맥적 관계를 이해한다.
+
+Transformer 모델은 인코더와 디코더라는 두 가지 주요 구성 요소로 이루어져 있다. 그러나 GPT 모델에서는 디코더 부분만 사용한다.
+각 부분은 동일한 층의 스택으로 구성되어 있다. 각 층에는 다중 헤드 자기 어텐션 메커니즘과 위치별 완전 연결 피드포워드 네트워크라는 두 개의 하위 층이 있다.
+이 두 하위 층 주위에는 잔여 연결이 있고, 그 다음에는 층 정규화가 이루어진다.
+
+Transformer 모델의 중요한 특징은 재귀적으로 시퀀스를 처리하는 순환 신경망(RNN)과 달리 입력 시퀀스를 병렬로 처리할 수 있는 능력이다.
+이러한 특성은 훈련 시간을 크게 단축시킨다.
 
 ---
