--- a/나만의 GPT 개발/01. GPT 모델 파인튜닝 시작하기.md
+++ b/나만의 GPT 개발/01. GPT 모델 파인튜닝 시작하기.md
@@ -4,7 +4,7 @@
 
 ---
 ## 목차
-1) [GPT아키텍쳐 이해](#-아키텍쳐-이해)
+1) [GPT아키텍쳐 이해](# 01.-아키텍쳐-이해)
 2) 파인튜닝을 위한 환경 설정
 3) 사전 훈련된 GPT 모델 다운로드
 4) 파인튜닝을 위한 준비
@@ -14,7 +14,7 @@
 8) 파인튜닝 과정 보호
 
 ---
-## 아키텍쳐 이해
+## 01.아키텍쳐 이해
 GPT 모델을 세밀하게 조정하는 데 앞서, 그 모델의 아키텍처를 이해하는 것이 중요하다.
 GPT 아키텍처는 자연어 처리 분야에 혁신을 가져온 Transformer 모델을 기반으로 구축되었다.
 
@@ -30,3 +30,4 @@ Transformer 모델의 중요한 특징은 재귀적으로 시퀀스를 처리하
 이러한 특성은 훈련 시간을 크게 단축시킨다.
 
 ---
+## 파인 튜닝을 위한
