Update 01. GPT 모델 파인튜닝 시작하기.md

--- a/나만의 GPT 개발/01. GPT 모델 파인튜닝 시작하기.md
+++ b/나만의 GPT 개발/01. GPT 모델 파인튜닝 시작하기.md
@@ -4,8 +4,8 @@
 
 ---
 ## 목차
-1) [GPT아키텍쳐 이해](#01.-아키텍쳐-이해)
-2) 파인튜닝을 위한 환경 설정
+1) [GPT아키텍쳐 이해](#-01.-아키텍쳐-이해)
+2) [파인튜닝을 위한 환경 설정](#-02.-파인-튜닝을-위한)
 3) 사전 훈련된 GPT 모델 다운로드
 4) 파인튜닝을 위한 준비
 5) 파인튜닝 과정
@@ -30,4 +30,4 @@ Transformer 모델의 중요한 특징은 재귀적으로 시퀀스를 처리하
 이러한 특성은 훈련 시간을 크게 단축시킨다.
 
 ---
-## 파인 튜닝을 위한
+## 02. 파인 튜닝을 위한
