--- a/나만의 GPT 개발/01. GPT 모델 파인튜닝 시작하기.md
+++ b/나만의 GPT 개발/01. GPT 모델 파인튜닝 시작하기.md
@@ -30,4 +30,12 @@ Transformer 모델의 중요한 특징은 재귀적으로 시퀀스를 처리하
 이러한 특성은 훈련 시간을 크게 단축시킨다.
 
 ---
-## 02.파인 튜닝을 위한
+## 02.파인 튜닝을 위한 환경 설정
+* GPU
+* RAM
+* 저장 공간
+* Python
+* CUDA와 cuDNN
+* 가상환경 설정
+* 
+---
